--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,7 @@ nav a:first-child {
 /* footer */
 
 footer {
-  padding: 30px 0;
+  padding: 30px 10px;
   clear: both;
   font-size: 12px;
   color: #ffffff;
@@ -112,7 +112,8 @@ footer {
   height: 50px;
 }
 
-h3, h2 {
+h3,
+h2 {
   padding-bottom: 20px;
   margin-bottom: 15px;
   line-height: 22px;
@@ -218,56 +219,118 @@ input[type=submit] {
   border: 0 none;
 }
 
-/* For Laptops */
+/* Begin Settings for Desktops */
+@media only screen and (max-width: 980px) {
 
-@media screen 
-  and (min-device-width: 1200px) 
-  and (max-device-width: 1600px) 
-  and (-webkit-min-device-pixel-ratio: 1) {
-    .main-section {float: left;} 
+  body {
+    max-width: 100%
+  }
+
+  #logo {
+    float: left;
+    text-align: center;
+    margin-left: 60px;
+  }
+
+  #main-container {
+    width: 60%;
+    float: center;
+    margin-left: 70px;
+  }
+
+  .work {
+    width: 46%;
+    float: left;
+  }
 }
 
-/* Laptops with Retina Screens */
+/* End Settings for Desktop */
 
-@media screen 
-  and (min-device-width: 1200px) 
-  and (max-device-width: 1600px) 
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (min-resolution: 192dpi) { 
+/* Begin Settings for Tablets */
+@media only screen and (max-width: 768px) {
+
+  body {
+    max-width: 768px;
+  }
+
+  #logo {
+    float: left;
+    text-align: center;
+    margin-left: 20px;
+  }
+
+  nav {
+    margin-right: 10px;
+    float: right;
+    text-align: center;
+  }
+
+  #main-container {
+    width: 95%;
+    float: center;
+    margin-left: 20px;
+  }
+
+  .auth-image {
+    float: left;
+    width: 50%;
+    height: auto;
+    margin-bottom: 20px;
+  }
+
+  .main-section {
+    margin-bottom: 450px;
+  }
 }
 
-/* Portrait and Landscape for iPhone 6+ - 8+ */
+/* End Settings for Tablets */
 
-@media only screen 
-  and (min-device-width: 414px) 
-  and (max-device-width: 736px) 
-  and (-webkit-min-device-pixel-ratio: 3) { 
+/* Begin Settings for Mobile */
+@media only screen and (max-width: 640px) {
+
+  body {
+    max-width: 640px;
+  }
+
+  #masthead {
+    float: left;
+    position: static;
+    margin-bottom: -110px;
+  }
+
+  #logo {
+    width: 100%;
+    float: left;
+    text-align: center;
+    margin-left: 0;
+  }
+
+  nav {
+    width: 100%;
+    float: left;
+    text-align: center;
+  }
+
+  #main-container {
+    width: 95%;
+    float: center;
+    margin-left: 15px;
+  }
+
+  .auth-image {
+    float: left;
+    width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+  }
+
+  .work {
+    width: 100%;
+  }
+
+  .main-section {
+    margin-bottom: 450px;
+  }
 }
 
-/* Portrait and Landscape for iPhone X */
-
-@media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 812px) 
-  and (-webkit-min-device-pixel-ratio: 3) { 
-}
-
-/* Google Pixel Portrait and Landscape */
-
-@media screen 
-  and (device-width: 360px) 
-  and (device-height: 640px) 
-  and (-webkit-device-pixel-ratio: 3) {
-}
-
-/* Google Pixel XL Portrait and Landscape */
-
-/* Portrait and Landscape */
-@media screen 
-  and (device-width: 360px) 
-  and (device-height: 640px) 
-  and (-webkit-device-pixel-ratio: 4) {
-}
-
-
-
+/* End Settings for Mobile */
